fix some issues related css on firefox

--- a/app/styles/component-styles/datasources/datasources-table.scss
+++ b/app/styles/component-styles/datasources/datasources-table.scss
@@ -97,7 +97,7 @@
     .body-wrapper {
       flex: 1 1 auto;
       display: block;
-      overflow-y: scroll;
+      overflow-y: auto;
       tr {
         width: 100%;
         td {
