--- a/app/styles/component-styles/jobs/jobs-table.scss
+++ b/app/styles/component-styles/jobs/jobs-table.scss
@@ -103,7 +103,7 @@
     .body-wrapper {
       flex: 1 1 auto;
       display: block;
-      overflow-y: scroll;
+      overflow-y: auto;
       tr {
         width: 100%;
         td {
